--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <h3>Información Personal</h3>
             <ul>
                 <li><strong>Edad:</strong> 20 años</li>
-                <li><strong>Email:</strong> juan.herrera@example.com</li>
-                <li><strong>Teléfono:</strong> +57 300 123 4567</li>
+                <li><strong>Email:</strong> juanandresh1024@gmail.com</li>
+                <li><strong>Teléfono:</strong> +57 317 688 9038</li>
                 <li><strong>Ubicación:</strong> Colombia</li>
             </ul>
         </div>
@@ -55,7 +55,6 @@
                 <li>Java | Spring Boot</li>
                 <li>SQL | MySQL | PostgreSQL</li>
                 <li>HTML | CSS | JavaScript</li>
-                <li>React | Vue</li>
                 <li>Git | GitHub</li>
             </ul>
         </div>
